# wintypes

./: .gitmodules  CMakeLists.txt  README.md
include/: LightMutex.h  NamedMutex.h  NamedResource.h  NamedResource.inl  ProtectMemory.h  SharedMutex.h  ibo32.h  wintypes.h
source/: LightMutex.cpp  NamedMutex.cpp  NamedResource.cpp  ProtectMemory.cpp  SharedMutex.cpp  ibo32.cpp
